--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.11/css/all.css">
   <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
   <title>Weather Chat</title>
 </head>
@@ -14,21 +15,20 @@
 <body>
   <div class="container">
     <h1>Weather Chat</h1>
-    <hr>
     <div id="ajax-loader">
       <img src="ajax-loader.gif" alt="ajax-loader">
     </div>
-      <form class="input-group search-city" novalidate>
-        <input type="text" id="input-temp" placeholder="Enter City" class="form-control">
-        <span class="input-group-btn">
-          <button type="submit" class="btn btn-primary" id="getTemp">Get Temp</button>
-        </span>
-      </form>
-      <div class="invalid-city">
-        Please provide a valid city.
-      </div>
-      <div class="posts"></div>
+    <form class="input-group search-city" novalidate>
+      <input type="text" id="input-temp" placeholder="Enter City" class="form-control">
+      <span class="input-group-btn">
+        <button type="submit" class="btn btn-primary" id="getTemp">Get Temp</button>
+      </span>
+    </form>
+    <div class="invalid-city">
+    </div>
+    <div class="posts"></div>
   </div>
+
 
   <script type="text/javascript" src="/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="datejs/src/core/parser.js"></script>
