--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,7 @@
             <option selected>Sort by...</option>
             <option value="1">City (alphabetic)</option>
             <option value="2">Temperature (coldest 1st)</option>
-            <option value="3">Date (latest post 1st)</option>
-
+            <option value="3">Date (latest 1st)</option>
           </select>
         </div>
       </div>
