--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,11 @@
         <div class="col-md-3">
           <select class="form-control custom-select" id="sort-by">
             <option selected>Sort by...</option>
-            <option value="1">City (alphabetic)</option>
-            <option value="2">Temperature (coldest 1st)</option>
-            <option value="3">Date (latest 1st)</option>
+            <option value="1">City Name</option>
+            <option value="2">Temperature </option>
+            <option value="3">Date </option>
           </select>
+          <span class="sort-icon"></span>
         </div>
         <!-- </div> col-md-3 -->
       </div>
