add new icon and some styles to the current weather and create img folder

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
     <div class="invalid-city"></div>
     <div id="ajax-loader">
-      <img src="ajax-loader.gif" alt="ajax-loader">
+      <img src="img/ajax-loader.gif" alt="ajax-loader">
     </div>
     <div class="pinnedPosts"></div>
     <div class="posts"></div>
